# faster-translate

./: .gitignore  LICENSE  README.md  demo.ipynb  preds.json  pyproject.toml  upload_package.sh
faster_translate/: __init__.py  model.py  utils.py
faster_translate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
