[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faster_translate"
version = "1.0.1"
description = "A simple translation utility using Hugging Face models."
readme = "README.md"
authors = [{name = "Sawradip Saha", email = "sawradip0@gmail.com"}]
license = {file = "LICENSE"}
keywords = ["translation", "huggingface", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers>=4.36.1",
    "ctranslate2>=4.1.0",
    "tokenizers>=0.15.2",
    "csebuetnlp-normalizer>=1.0.0",
    "datasets>=2.10.0"
]

